--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,8 @@
 
+MONGOURI="mongodb+srv://anandadi01:Aditya02@cluster0.rif08wd.mongodb.net/?retryWrites=true&w=majority"
+
+SECRET_KEY="thisisthegiveencryptedpasswordnowyouaresafe"
+
+JWT_EXPIRE=2
+
+COOKIE_EXPIRE=2
