cors: added cors

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,15 @@
 {
-    "version": 2,
-    "name": "music-album",
-    "builds": [
-       { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "index.js" }
-    ]
- }
+  "version": 2,
+  "name": "music-album",
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+    }
+  ]
+}
